Prueba de Legiones: GH, HS, HT, Mortales, ademas de su leveleo de poderes y defensas max 5

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: CaramelitoServerPlugin
 version: '1.0-SNAPSHOT'
 main: com.beta1312.Start.Start
 api-version: '1.21'
+commands:
+  admin:
+  up:
